kubernetes/environments/prod/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ewallet
  labels:
    environment: production
---
apiVersion: v1
kind: Namespace
metadata:
  name: wasteco
  labels:
    environment: production
---
apiVersion: v1
kind: Namespace
metadata:
  name: resolva
  labels:
    environment: production
